--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 <li><a href="ember-v2.6.1/dist/"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Ember v2.6.1</a></li>
                 <li><a href="inferno-v0.7.13/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Inferno v0.7.13</a></li>
                 <li><a href="inferno-v0.7.26-mobX-v2.4.4/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Inferno v0.7.26 MobX v2.4.4</a></li>
+                <li><a href="inferno-v0.7.26-redux-v3.5.2/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Inferno v0.7.26 Redux v3.5.2</a></li>
+                <li><a href="inferno-v0.7.26-redux-v3.5.2-immutable-js-v3.8.1/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Inferno v0.7.26 Redux v3.5.2 Immutable-JS v3.8.1</a></li>
                 <li><a href="kivi-v1.0.0-rc0/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> kivi v1.0.0-rc0</a></li>
                 <li><a href="mithril-v0.2.5/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Mithril v0.2.5</a></li>
                 <li><a href="mithril-v1.0.0-alpha/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Mithril v1.0.0-alpha</a></li>
