--- a/inferno-v0.7.26-redux-v3.5.2/index.html
+++ b/inferno-v0.7.26-redux-v3.5.2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Inferno v0.7.26 with MobX v2.4.4</title>
+  <title>Inferno v0.7.26 with Redux v3.5.2</title>
   <link href="../css/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="../css/main.css" rel="stylesheet"/>
 </head>
