--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li><a href="react-v15.3.0/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> React v15.2.0</a></li>
                 <li><a href="react-v15.3.0-mobX-v2.4.2/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> React v15.2.0 MobX v2.4.0</a></li>
                 <li><a href="react-v15.3.0-redux-v3.5.2/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> React v15.2.0 Redux v3.5.2</a></li>
+                <li><a href="react-v15.3.0-redux-v3.5.2-immutable-js-v3.8.1/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> React v15.2.0 Redux v3.5.2 Immutable-JS v3.8.1</a></li>
                 <li><a href="riot-v2.5.0/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> riot-v2.5.0</a></li>
                 <li><a href="tsers-v1.0.0/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> TSERS v1.0.0</a></li>
                 <li><a href="vanillajs/index.html"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> VanillaJS</a></li>
